--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <!-- matchs -->
       <section id="matchs">
-        <h1>Calendrier</h1>
+        <h1 class="titre">Calendr<i class="dot">i</i>er</h1>
         <!-- Section des matchs précédents -->
 
         <div id="previous">
