--- a/html/planning.html
+++ b/html/planning.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="../img/logo-as.png" />
 
     <!--javascript-->
-    <script defer src="../javascript/main.js"></script>
+    <script defer src="../javascript/planning.js"></script>
     <!--css-->
     <link rel="stylesheet" href="../css/p-planning.css" />
     <link rel="stylesheet" href="../css/base.css" />
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="../css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   </head>
 
@@ -110,66 +112,66 @@
         <div class="img-container">
           <img src="../img/organigramme2.png" alt="Organigramme" />
         </div>
+      </section>
 
-        <section class="coach-container">
-          <h1 class="titre">Nos <span>Coachs</span></h1>
+      <section id="member">
+        <h1 class="titre">Nos <span>membres</span></h1>
 
-          <div class="wrapper">
-            <i id="left" class="fa-solid fa-angle-left"></i>
+        <div class="wrapper">
+          <i id="left" class="fa-solid fa-angle-left"></i>
 
-            <ul class="carousel">
-              <li class="card">
-                <div class="img">
-                  <img src="../img/old5.jpg" alt="img" draggable="false" />
-                </div>
-                <h2>Mika Siciliano</h2>
-                <span>Coach u12</span>
-              </li>
+          <ul class="carousel">
+            <li class="card">
+              <div class="img">
+                <img src="../img/old5.jpg" alt="img" draggable="false" />
+              </div>
+              <h2>Mika Siciliano</h2>
+              <span>Coach u12</span>
+            </li>
 
-              <li class="card">
-                <div class="img">
-                  <img src="../img/coach4.JPG" alt="img" draggable="false" />
-                </div>
-                <h2>Antonio concepcion</h2>
-                <span>Coach u19</span>
-              </li>
+            <li class="card">
+              <div class="img">
+                <img src="../img/coach4.JPG" alt="img" draggable="false" />
+              </div>
+              <h2>Antonio concepcion</h2>
+              <span>Coach u19</span>
+            </li>
 
-              <li class="card">
-                <div class="img">
-                  <img src="../img/coach5.JPG" alt="img" draggable="false" />
-                </div>
-                <h2>Lariach French</h2>
-                <span>Coach Technique</span>
-              </li>
+            <li class="card">
+              <div class="img">
+                <img src="../img/coach5.JPG" alt="img" draggable="false" />
+              </div>
+              <h2>Lariach French</h2>
+              <span>Coach Technique</span>
+            </li>
 
-              <li class="card">
-                <div class="img">
-                  <img src="../img/coach6.JPG" alt="img" draggable="false" />
-                </div>
-                <h2>James Khosravi</h2>
-                <span>Coach u8</span>
-              </li>
+            <li class="card">
+              <div class="img">
+                <img src="../img/coach6.JPG" alt="img" draggable="false" />
+              </div>
+              <h2>James Khosravi</h2>
+              <span>Coach u8</span>
+            </li>
 
-              <li class="card">
-                <div class="img">
-                  <img src="../img/coach7.JPG" alt="img" draggable="false" />
-                </div>
-                <h2>Langelez Gregoire</h2>
-                <span>Coach u19</span>
-              </li>
+            <li class="card">
+              <div class="img">
+                <img src="../img/coach7.JPG" alt="img" draggable="false" />
+              </div>
+              <h2>Langelez Gregoire</h2>
+              <span>Coach u19</span>
+            </li>
 
-              <li class="card">
-                <div class="img">
-                  <img src="../img/coach3.jpg" alt="img" draggable="false" />
-                </div>
-                <h2>Donald Horton</h2>
-                <span>coach u11</span>
-              </li>
-            </ul>
+            <li class="card">
+              <div class="img">
+                <img src="../img/coach3.jpg" alt="img" draggable="false" />
+              </div>
+              <h2>Donald Horton</h2>
+              <span>coach u11</span>
+            </li>
+          </ul>
 
-            <i id="right" class="fa-solid fa-angle-right"></i>
-          </div>
-        </section>
+          <i id="right" class="fa-solid fa-angle-right"></i>
+        </div>
       </section>
     </main>
 
