--- a/html/contact.html
+++ b/html/contact.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -88,8 +88,6 @@
         </ul>
       </nav>
     </header>
-
-    </div>
 
     <!-- ------------------------------------------------- -->
     <div class="contact-container">
