--- a/html/histoire.html
+++ b/html/histoire.html
@@ -88,7 +88,6 @@
         </ul>
       </nav>
     </header>
-    <!-- ----------- -->
 
     <h1 class="titre">L' histoire<span> du club</span></h1>
 
@@ -112,78 +111,70 @@
 
       <!-- ------------------------------------ -->
 
-      <div id="u7">
-        <div class="story">
-          <div class="align-right">
-            <p>
-              Le club des Montagnards a connu un nouveau chapitre passionnant lorsque Michael Dupont a pris les rênes en tant
-              que président. Son leadership visionnaire et son engagement envers le développement du football local ont
-              apporté une nouvelle énergie et une nouvelle direction au club. Sous sa direction, le club a connu une
-              croissance significative et a renforcé sa présence dans la communauté de Montigny et au-delà. Michael Dupont a
-              été un pilier central de l'équipe, guidant le club avec dévouement et passion. Sa détermination à faire
-              progresser le club des Montagnards a permis de réaliser de grandes avancées, à la fois sur et en dehors du
-              terrain.
-            </p>
-          </div>
-
-          <img class="story-photo" src="../img/president4.jpg" />
+      <div class="story">
+        <div class="align-right">
+          <p>
+            Le club des Montagnards a connu un nouveau chapitre passionnant lorsque Michael Dupont a pris les rênes en tant
+            que président. Son leadership visionnaire et son engagement envers le développement du football local ont apporté
+            une nouvelle énergie et une nouvelle direction au club. Sous sa direction, le club a connu une croissance
+            significative et a renforcé sa présence dans la communauté de Montigny et au-delà. Michael Dupont a été un pilier
+            central de l'équipe, guidant le club avec dévouement et passion. Sa détermination à faire progresser le club des
+            Montagnards a permis de réaliser de grandes avancées, à la fois sur et en dehors du terrain.
+          </p>
         </div>
+
+        <img class="story-photo" src="../img/president4.jpg" />
       </div>
 
       <!-- --------------------------------- -->
 
-      <div id="u9">
-        <div class="story">
-          <img class="story-photo" src="../img/mascotte3.png" />
+      <div class="story">
+        <img class="story-photo" src="../img/mascotte3.png" />
 
-          <div class="story-info">
-            <p>
-              L'emblème du club de l'AS Montigny, représenté par un griffon majestueux, incarne la fierté et la détermination
-              de l'équipe. Symbole de force et de courage, le griffon est un rappel constant de l'esprit combatif des joueurs
-              qui défendent les couleurs de Montigny. Avec ses ailes déployées et sa posture imposante, le griffon inspire
-              les joueurs et les supporteurs, les poussant à donner le meilleur d'eux-mêmes sur le terrain. En tant que
-              mascotte du club, le griffon est le lien entre les joueurs et les valeurs du club, créant une identité unifiée
-              et un esprit d'équipe solide. Son image emblématique est instantanément reconnaissable, représentant
-              l'engagement et l'excellence de l'AS Montigny dans le monde du football.
-            </p>
-          </div>
+        <div class="story-info">
+          <p>
+            L'emblème du club de l'AS Montigny, représenté par un griffon majestueux, incarne la fierté et la détermination
+            de l'équipe. Symbole de force et de courage, le griffon est un rappel constant de l'esprit combatif des joueurs
+            qui défendent les couleurs de Montigny. Avec ses ailes déployées et sa posture imposante, le griffon inspire les
+            joueurs et les supporteurs, les poussant à donner le meilleur d'eux-mêmes sur le terrain. En tant que mascotte du
+            club, le griffon est le lien entre les joueurs et les valeurs du club, créant une identité unifiée et un esprit
+            d'équipe solide. Son image emblématique est instantanément reconnaissable, représentant l'engagement et
+            l'excellence de l'AS Montigny dans le monde du football.
+          </p>
         </div>
       </div>
+
       <!-- ---------------------------------- -->
-      <div id="u11">
-        <div class="story">
-          <div class="align-right">
-            <p>
-              L'extrait du journal témoigne de la première sortie en match officiel de l'AS Montigny, marquant un moment
-              inoubliable dans l'histoire du club. Contre toute attente, l'équipe a réussi à remporter une victoire éclatante
-              contre la JS Marcinelle. Les joueurs de Montigny ont démontré un jeu solide et une détermination sans faille
-              tout au long de la rencontre, impressionnant les supporters venus les soutenir. Cette victoire inaugurale a été
-              célébrée avec enthousiasme par les membres de l'équipe et les fidèles supporters, créant un e ambiance de joie
-              et de fierté dans tout le club. Cet événement a marqué le début d'une série de succès pour l'AS Montigny et a
-              jeté les bases d'un avenir prometteur pour cette jeune équipe ambitieuse.
-            </p>
-          </div>
-          <img class="story-photo" src="../img/gazette2.jpg" />
+      <div class="story">
+        <div class="align-right">
+          <p>
+            L'extrait du journal témoigne de la première sortie en match officiel de l'AS Montigny, marquant un moment
+            inoubliable dans l'histoire du club. Contre toute attente, l'équipe a réussi à remporter une victoire éclatante
+            contre la JS Marcinelle. Les joueurs de Montigny ont démontré un jeu solide et une détermination sans faille tout
+            au long de la rencontre, impressionnant les supporters venus les soutenir. Cette victoire inaugurale a été
+            célébrée avec enthousiasme par les membres de l'équipe et les fidèles supporters, créant un e ambiance de joie et
+            de fierté dans tout le club. Cet événement a marqué le début d'une série de succès pour l'AS Montigny et a jeté
+            les bases d'un avenir prometteur pour cette jeune équipe ambitieuse.
+          </p>
         </div>
+        <img class="story-photo" src="../img/gazette2.jpg" />
       </div>
 
       <!-- ------------------------- -->
-      <div id="u12">
-        <div class="story">
-          <img class="story-photo" src="../img/gazette4.jpg" />
+      <div class="story">
+        <img class="story-photo" src="../img/gazette4.jpg" />
 
-          <div class="story-info">
-            <p>
-              L'image de l'équipe P4, pleine de détermination et de volonté de gravir les échelons, témoigne de l'évolution
-              constante de tout le club de l'AS Montigny. Cette réussite sportive reflète l'engagement collectif des joueurs,
-              des entraîneurs, du staff technique et de tous les membres du club. L'AS Montigny est en pleine expansion, avec
-              de nombreux projets en cours qui témoignent de sa vision à long terme. Que ce soit dans le développement des
-              infrastructures, la promotion des jeunes talents ou l'engagement communautaire, le club s'efforce de se
-              dépasser et de poursuivre son évolution positive. Cette dynamique reflète la volonté de l'AS Montigny de
-              s'établir comme une référence dans le monde du football local et régional. Avec un esprit d'innovation et une
-              passion sans limites, le club ne cessera de progresser et de se renforcer dans les années à venir.
-            </p>
-          </div>
+        <div class="story-info">
+          <p>
+            L'image de l'équipe P4, pleine de détermination et de volonté de gravir les échelons, témoigne de l'évolution
+            constante de tout le club de l'AS Montigny. Cette réussite sportive reflète l'engagement collectif des joueurs,
+            des entraîneurs, du staff technique et de tous les membres du club. L'AS Montigny est en pleine expansion, avec
+            de nombreux projets en cours qui témoignent de sa vision à long terme. Que ce soit dans le développement des
+            infrastructures, la promotion des jeunes talents ou l'engagement communautaire, le club s'efforce de se dépasser
+            et de poursuivre son évolution positive. Cette dynamique reflète la volonté de l'AS Montigny de s'établir comme
+            une référence dans le monde du football local et régional. Avec un esprit d'innovation et une passion sans
+            limites, le club ne cessera de progresser et de se renforcer dans les années à venir.
+          </p>
         </div>
       </div>
     </section>
