add first preview for histoire and projets + add the same button of the shop for the planning field

--- a/html/histoire.html
+++ b/html/histoire.html
@@ -97,8 +97,8 @@
       <div class="story">
         <img class="story-photo" src="../img/old1.jpg" />
 
-        <div class="story-info">
-          <p style="font-family: Inter-light">
+        <div class="text-box">
+          <p class="inter-light">
             En avril 2016, l'AS Montigny a créé sa première équipe, marquant ainsi le début de son parcours sportif. Cette
             équipe pionnière a été formée avec passion et détermination par les fondateurs du club, qui étaient animés par
             une volonté commune de promouvoir le football local. Composée de joueurs talentueux et ambitieux, l'équipe a
@@ -112,8 +112,8 @@
       <!-- ------------------------------------ -->
 
       <div class="story">
-        <div class="align-right">
-          <p>
+        <div class="text-box">
+          <p class="inter-light">
             Le club des Montagnards a connu un nouveau chapitre passionnant lorsque Michael Dupont a pris les rênes en tant
             que président. Son leadership visionnaire et son engagement envers le développement du football local ont apporté
             une nouvelle énergie et une nouvelle direction au club. Sous sa direction, le club a connu une croissance
@@ -131,8 +131,8 @@
       <div class="story">
         <img class="story-photo" src="../img/mascotte3.png" />
 
-        <div class="story-info">
-          <p>
+        <div class="text-box">
+          <p class="inter-light">
             L'emblème du club de l'AS Montigny, représenté par un griffon majestueux, incarne la fierté et la détermination
             de l'équipe. Symbole de force et de courage, le griffon est un rappel constant de l'esprit combatif des joueurs
             qui défendent les couleurs de Montigny. Avec ses ailes déployées et sa posture imposante, le griffon inspire les
@@ -146,8 +146,8 @@
 
       <!-- ---------------------------------- -->
       <div class="story">
-        <div class="align-right">
-          <p>
+        <div class="text-box">
+          <p class="inter-light">
             L'extrait du journal témoigne de la première sortie en match officiel de l'AS Montigny, marquant un moment
             inoubliable dans l'histoire du club. Contre toute attente, l'équipe a réussi à remporter une victoire éclatante
             contre la JS Marcinelle. Les joueurs de Montigny ont démontré un jeu solide et une détermination sans faille tout
@@ -164,16 +164,12 @@
       <div class="story">
         <img class="story-photo" src="../img/gazette4.jpg" />
 
-        <div class="story-info">
-          <p>
-            L'image de l'équipe P4, pleine de détermination et de volonté de gravir les échelons, témoigne de l'évolution
-            constante de tout le club de l'AS Montigny. Cette réussite sportive reflète l'engagement collectif des joueurs,
-            des entraîneurs, du staff technique et de tous les membres du club. L'AS Montigny est en pleine expansion, avec
-            de nombreux projets en cours qui témoignent de sa vision à long terme. Que ce soit dans le développement des
-            infrastructures, la promotion des jeunes talents ou l'engagement communautaire, le club s'efforce de se dépasser
-            et de poursuivre son évolution positive. Cette dynamique reflète la volonté de l'AS Montigny de s'établir comme
-            une référence dans le monde du football local et régional. Avec un esprit d'innovation et une passion sans
-            limites, le club ne cessera de progresser et de se renforcer dans les années à venir.
+        <div class="text-box">
+          <p class="inter-light">
+            L'équipe P4, pleine de détermination, témoigne de l'évolution constante de l'AS Montigny. Cette réussite sportive
+            reflète l'engagement collectif des joueurs, des entraîneurs et du staff technique. Le club est en pleine
+            expansion, développant ses infrastructures et promouvant les jeunes talents. Avec un esprit d'innovation et une
+            passion sans limites, l'AS Montigny s'établit comme une référence dans le football local et régional.
           </p>
         </div>
       </div>
