--- a/html/planning.html
+++ b/html/planning.html
@@ -92,8 +92,17 @@
     </header>
 
     <main>
+      <h1 class="titre">Planning saison <span>2023/2024</span></h1>
       <section id="planning">
-        <h1 class="titre">Planning saison <span>2023/2024</span></h1>
+        <div class="cart-button-container" style="top: -3.1rem; right: 2.5rem">
+          <a
+            href="https://asmontigny.prosoccerdata.com/api/v2/narrowcasting/pages/html/864512b6-fc17-4b12-a988-4cc55bbaaa10"
+            class="button-with-icon">
+            <i class="bx bx-calendar icon" id="calendar-icon"></i>
+            <span class="text">Terrains</span>
+          </a>
+        </div>
+
         <div class="img-container">
           <img src="../img/planning.jpg" alt="Planning" />
         </div>
