--- a/html/projets.html
+++ b/html/projets.html
@@ -91,115 +91,55 @@
 
     <h1 class="titre">Les <span>projets</span></h1>
 
-    <div id="all-projet">
-      <!-- ---------------------------------- -->
-
-      <div class="projet">
-        <img src="../img/travaux2.jpg" class="projet-img" />
-
-        <div class="projet-info">
+    <section id="all-projects">
+      <div class="project">
+        <img class="project-photo" src="../img/travaux2.jpg" />
+        <div class="text-box">
           <h2>Projet de développement</h2>
-
-          <p>
-            L'aménagement des terrains vise à créer des infrastructures sportives modernes et adaptées aux besoins de notre
-            club. Cela comprend la rénovation et la mise à niveau des terrains existants, l'installation de nouvelles
-            surfaces de jeu de haute qualité et l'amélioration des équipements nécessaires pour les entraînements et les
-            matchs..
-          </p>
-
-          <h2>Objectifs du projet</h2>
-
-          <p>
-            Les objectifs du projet d'aménagement des terrains sont multiples. Ils comprennent l'amélioration des conditions
-            de jeu pour les joueurs de toutes les catégories, la créatio n d'un environnement sûr et stimulant pour les
-            entraînements et les compétitions, ainsi que la possibilité d'accueillir des événements sportifs de haut niveau.
-            Nous visons également à renforcer notre attractivité en tant que club et à favoriser la croissance de notre
-            effectif.
-          </p>
-
-          <h2>Activités prévues</h2>
-
-          <p>
+          <p class="inter-light">
             Les activités prévues dans le cadre de ce projet incluent la préparation des terrains, la mise en place de
             nouvelles infrastructures telles que des éclairages et des tribunes, ainsi que la gestion continue de l'entretien
-            pour assurer des conditions optimales. Des partenariats avec des experts du secteur seront établis pour garantir
-            la qualité des travaux et la conformité aux normes sportives.
+            pour assurer des conditions optimales.
           </p>
         </div>
       </div>
-      <!-- ------------------------------------ -->
 
-      <div class="projet">
-        <div class="align-right">
-          <h2>Projet de développement</h2>
-
-          <p>
-            Projet de développement : Le projet de construction de la buvette et des nouveaux vestiaires vise à offrir aux
-            joueurs, aux supporters et aux visiteurs des installations modernes et fonctionnelles. Cela inclut la conception
-            et la construction d'une buvette accueillante, offrant un espace convivial pour se restaurer et socialiser, ainsi
-            que la création de nouveaux vestiaires équipés de douches et de commodités pour les joueurs.
-          </p>
-
-          <h2>Objectifs du projet</h2>
-
-          <p>
-            Les objectifs du projet sont de créer un espace accueillant pour les membres du club et de promouvoir une
-            atmosphère conviviale et chaleureuse. Les nouvelles installations permettront d'améliorer le confort et la
-            commodité des joueurs avant et après les matchs, et offriront un espace propice à la convivialité et aux
-            rencontres entre les membres et les supporters.
-          </p>
-
-          <h2>Activités prévues</h2>
-
-          <p>
+      <div class="project">
+        <div class="text-box">
+          <h2>Projet d'infrastructure</h2>
+          <p class="inter-light">
             Les activités prévues comprennent la conception architecturale des nouveaux bâtiments, la réalisation des travaux
-            de construction, l'installation des équipements nécessaires dans la buvette et les vestiaires, ainsi que la
-            coordination des aspects liés à l'approvisionnement en eau, à l'électricité et aux systèmes de plomberie.
+            de construction, l'installation des équipements nécessaires dans la buvette et les vestiaires.
           </p>
         </div>
-        <img src="../img/travaux5.jpg" class="projet-img" />
+        <img class="project-photo" src="../img/travaux5.jpg" />
       </div>
 
-      <!-- --------------------------------- -->
-
-      <div class="projet">
-        <img src="../img/travaux1.jpg" class="projet-img" />
-
-        <div class="projet-info">
+      <div class="project">
+        <img class="project-photo" src="../img/travaux1.jpg" />
+        <div class="text-box">
           <h2>Projet de développement</h2>
-
-          <p>
-            Projet de développement : Cette image avant et après illustre l'évolution et les progrès réalisés grâce aux
-            projets de développemen entrepris par notre club. Elle met en évidence les transformations physiques et les
-            améliorations apportées à nos installations, démontrant notre engagement constant à offrir des conditions
-            optimales aux joueurs et aux membres.
-          </p>
-
-          <h2>Objectifs du projet</h2>
-
-          <p>
-            Les objectifs du projet avant et après sont de montrer visuellement l'impact positif des investissements réalisés
-            dans le club. Cela inclut l'amélioration des infrastructures, l'augmentation de la qualité des équipements, et la
-            création d'un environnement propice à la pratiqu sportive et au développement personnel des joueurs.
-          </p>
-
-          <h2>Activités prévues</h2>
-
-          <p>
-            Les activités prévues pour réaliser cette transformation incluent la planification et la mise en œuvre des
-            projets de développement précédemment mentionnés, ainsi que la documentation photographique des progrès réalisés.
-            Des étapes telles que la préparation du terrain, les travaux de construction et la mise en place des nouvelles
-            installations ont été nécessaires pour atteindre l'image après.
+          <p class="inter-light">
+            Cette image avant et après illustre l'évolution et les progrès réalisés grâce aux projets de développement
+            entrepris par notre club. Elle met en évidence les transformations physiques et les améliorations apportées à nos
+            installations.
           </p>
         </div>
       </div>
 
-      <!-- ---------------------------------- -->
-    </div>
+      <div class="project">
+        <div class="text-box">
+          <h2>Le volontariat</h2>
+          <p class="inter-light">
+            Pratiquement tout le staff fonctionne sous le régime du volontariat. Envie de prêter main forte à notre
+            organisation ? Plus d'informations sur le volontariat sur levolontariat.be. Inscrivez-vous sur notre formulaire
+            et rejoignez le groupe "les extras" sur Facebook.
+          </p>
+        </div>
+        <img class="project-photo" src="../img/pics25.jpg" />
+      </div>
+    </section>
 
-    Le volontariat Pratiquement tout le staff fonctionne sous le régime du volontariat (communément appelé "bénévolat").
-    Envie de prêter mains fortes à notre organisation ? Plus d'informations sur le volontariat ? levolontariat.be inscriez
-    vous sur notre formulaire rejoignez le groupe les extras sur facebook
     <!----FOOTER---->
     <footer>
       <div class="logocontainer-footer">
