finish V1 of contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -89,139 +89,121 @@
       </nav>
     </header>
 
-    <!-- ------------------------------------------------- -->
-    <div class="contact-container">
-      <div class="contact-info">
-        <h2 class="soustitre">Coordonnées <span>générales</span></h2>
+    <main>
+      <!-- ------------------------------------------------- -->
+      <section class="contact-container">
+        <div class="contact-info">
+          <h2 class="soustitre">Coordonnées <span>générales</span></h2>
 
-        <p>
-          <img src="img/icon-mail.png" class="icon-footer" alt="" />
-          michael.dupont@outlook.com
-        </p>
-        <p><img src="img/icon-tel.png" class="icon-footer" alt="" /> 0495/282992</p>
+          <p>
+            <img src="../img/icon-mail.png" class="icon-footer" alt="" />
+            michael.dupont@outlook.com
+          </p>
+          <p><img src="../img/icon-tel.png" class="icon-footer" alt="" /> 0495/282992</p>
 
-        <h2 class="soustitre">Adresse du club</h2>
-        <p><img src="img/icon-localisation.png" class="icon-footer" /> Rue Bois Frion 109, 6110 Montigny-le-Tilleul</p>
+          <h2 class="soustitre">Adresse du club</h2>
+          <p><img src="../img/icon-localisation.png" class="icon-footer" /> Rue Bois Frion 109, 6110 Montigny-le-Tilleul</p>
 
-        <h2 class="soustitre">Heures d'ouverture</h2>
-        <img src="" alt="" />
-        <p><img src="img/icon-horraire.png" alt="" class="icon-footer" /> Lundi - Vendredi : 9h00 - 19h00</p>
+          <h2 class="soustitre">Heures d'ouverture</h2>
+          <img src="" alt="" />
+          <p><img src="../img/icon-horraire.png" alt="" class="icon-footer" /> Lundi - Vendredi : 9h00 - 19h00</p>
 
-        <h2 class="soustitre">Réseaux sociaux</h2>
+          <h2 class="soustitre">Réseaux sociaux</h2>
 
-        <div class="social-contact">
-          <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
-            <img src="img/logo-instagram.png" class="icon-taille" alt="" />
-          </a>
+          <div class="social-contact">
+            <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
+              <img src="../img/logo-instagram.png" class="icon-taille" alt="" />
+            </a>
 
-          <a href="https://www.facebook.com/footmontigny" class="social-icon">
-            <img src="img/logo-facebook.png" class="icon-taille" alt="" />
-          </a>
+            <a href="https://www.facebook.com/footmontigny" class="social-icon">
+              <img src="../img/logo-facebook.png" class="icon-taille" alt="" />
+            </a>
 
-          <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
-            <img src="img/logo-google.png" class="icon-taille" alt="" />
-          </a>
+            <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
+              <img src="../img/logo-google.png" class="icon-taille" alt="" />
+            </a>
 
-          <a href="https://youtube.com/@asmontigny2175" class="social-icon">
-            <img src="img/logo-youtube.png" class="icon-taille" alt="" />
-          </a>
+            <a href="https://youtube.com/@asmontigny2175" class="social-icon">
+              <img src="../img/logo-youtube.png" class="icon-taille" alt="" />
+            </a>
+          </div>
+
+          <details>
+            <summary>
+              <h2 class="soustitre">Politique de confidentialité</h2>
+            </summary>
+
+            <p>
+              Cette politique de confidentialité décrit comment le Club de Foot Amateur collecte, utilise et protège les
+              informations personnelles que vous nous fournissez lorsque vous utilisez notre site web ou interagissez avec
+              notre club.
+            </p>
+
+            <h2>Collecte d'informations</h2>
+
+            <p>
+              Nous collectons certaines informations personnelles lorsque vous remplissez des formulaires sur notre site web
+              ou lorsque vous nous contactez par e-mail ou par téléphone. Les informations que nous collectons peuvent
+              inclure votre nom, votre adresse e-mail, votre numéro de téléphone, ainsi que d'autres informations nécessaires
+              pour répondre à vos demandes ou pour vous inscrire à des événements.
+            </p>
+
+            <h2>Utilisation des informations</h2>
+
+            <p>
+              Les informations personnelles que vous nous fournissez peuvent être utilisées pour les finalités suivantes :
+            </p>
+
+            <ul>
+              <li>Répondre à vos demandes de renseignements ou de contact</li>
+              <li>Vous informer des dernières actualités, événements et activités du club</li>
+              <li>Faciliter votre inscription et votre participation aux activités du club</li>
+              <li>Vous contacter à des fins de marketing et de communication liées au club</li>
+              <li>Améliorer nos services et personnaliser votre expérience en tant que membre du club</li>
+            </ul>
+
+            <h2>Protection des informations</h2>
+
+            <p>
+              Nous nous engageons à protéger les informations personnelles que vous nous fournissez. Nous mettons en place
+              des mesures de sécurité appropriées pour prévenir tout accès non autorisé, divulgation, altération ou
+              destruction de vos informations.
+            </p>
+
+            <h2>Partage des informations</h2>
+
+            <p>
+              Nous ne vendons, ne louons ni ne divulguons vos informations personnelles à des tiers, sauf si nous obtenons
+              votre consentement préalable ou si cela est requis par la loi.
+            </p>
+
+            <h2>Liens vers d'autres sites web</h2>
+
+            <p>
+              Notre site web peut contenir des liens vers d'autres sites web. Veuillez noter que nous ne sommes pas
+              responsables des pratiques de confidentialité de ces autres sites. Nous vous encourageons à lire les politiques
+              de confidentialité de ces sites web lorsque vous les visitez.
+            </p>
+
+            <h2>Modifications de la politique de confidentialité</h2>
+
+            <p>
+              Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification
+              sera publiée sur cette page. Veuillez consulter régulièrement cette page pour rester informé des mises à jour
+              éventuelles.
+            </p>
+
+            <h2>Nous contacter</h2>
+
+            <p>
+              Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter à l'adresse
+              e-mail suivante : privacy@clubfootamateur.com
+            </p>
+          </details>
         </div>
-
-        <h2 class="soustitre">Sponsoring</h2>
-        <p>
-          <img src="img/banner-sponsor.jpeg" alt="" class="sponsor-img" />
-        </p>
-
-        <h2 class="soustitre">Recrutement de joueurs</h2>
-        <div class="product">
-          <img src="img/actu8.jpg" data-filter="recherche" />
-          <img src="img/actu10.jpg" data-filter="recherche" />
-        </div>
-
-        <h1 class="soustitre">Planning <span>terrain</span></h1>
-
-        <a
-          href="https://asmontigny.prosoccerdata.com/api/v2/narrowcasting/pages/html/864512b6-fc17-4b12-a988-4cc55bbaaa10"
-          class="planning"
-          >planning</a
-        >
-
-        <details>
-          <summary>
-            <h2 class="soustitre">
-              Politique de confidentialité
-              <img src="img/fleche-vers-le-bas.png" width="22px" />
-            </h2>
-          </summary>
-
-          <p>
-            Cette politique de confidentialité décrit comment le Club de Foot Amateur collecte, utilise et protège les
-            informations personnelles que vous nous fournissez lorsque vous utilisez notre site web ou interagissez avec
-            notre club.
-          </p>
-
-          <h2>Collecte d'informations</h2>
-
-          <p>
-            Nous collectons certaines informations personnelles lorsque vous remplissez des formulaires sur notre site web ou
-            lorsque vous nous contactez par e-mail ou par téléphone. Les informations que nous collectons peuvent inclure
-            votre nom, votre adresse e-mail, votre numéro de téléphone, ainsi que d'autres informations nécessaires pour
-            répondre à vos demandes ou pour vous inscrire à des événements.
-          </p>
-
-          <h2>Utilisation des informations</h2>
-
-          <p>Les informations personnelles que vous nous fournissez peuvent être utilisées pour les finalités suivantes :</p>
-
-          <ul>
-            <li>Répondre à vos demandes de renseignements ou de contact</li>
-            <li>Vous informer des dernières actualités, événements et activités du club</li>
-            <li>Faciliter votre inscription et votre participation aux activités du club</li>
-            <li>Vous contacter à des fins de marketing et de communication liées au club</li>
-            <li>Améliorer nos services et personnaliser votre expérience en tant que membre du club</li>
-          </ul>
-
-          <h2>Protection des informations</h2>
-
-          <p>
-            Nous nous engageons à protéger les informations personnelles que vous nous fournissez. Nous mettons en place des
-            mesures de sécurité appropriées pour prévenir tout accès non autorisé, divulgation, altération ou destruction de
-            vos informations.
-          </p>
-
-          <h2>Partage des informations</h2>
-
-          <p>
-            Nous ne vendons, ne louons ni ne divulguons vos informations personnelles à des tiers, sauf si nous obtenons
-            votre consentement préalable ou si cela est requis par la loi.
-          </p>
-
-          <h2>Liens vers d'autres sites web</h2>
-
-          <p>
-            Notre site web peut contenir des liens vers d'autres sites web. Veuillez noter que nous ne sommes pas
-            responsables des pratiques de confidentialité de ces autres sites. Nous vous encourageons à lire les politiques
-            de confidentialité de ces sites web lorsque vous les visitez.
-          </p>
-
-          <h2>Modifications de la politique de confidentialité</h2>
-
-          <p>
-            Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification
-            sera publiée sur cette page. Veuillez consulter régulièrement cette page pour rester informé des mises à jour
-            éventuelles.
-          </p>
-
-          <h2>Nous contacter</h2>
-
-          <p>
-            Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter à l'adresse
-            e-mail suivante : privacy@clubfootamateur.com
-          </p>
-        </details>
 
         <div class="contact-form">
-          <form action="envoyer_message.php" method="POST">
+          <form>
             <label for="name">Nom :</label>
             <input type="text" id="name" name="name" placeholder="Entrez votre nom" required />
 
@@ -234,8 +216,8 @@
             <button type="submit">Envoyer</button>
           </form>
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
 
     <!-- --------------------------- -->
 
