--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <!--icons-->
@@ -326,122 +325,101 @@
       </div>
 
       <div class="footer-container">
-        <div class="footer-section">
-          <h3>
-            À Propos
-            <hr class="hr-footer-1" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Saison
+              <hr class="hr-footer" style="width: 35%" />
+            </h3>
 
-          <p style="max-width: 30vh">
-            L'AS Montigny est un club de football amateur fondé en 1985 et situé à Montigny-le-tilleul, à Charleroi. Notre
-            club a pour objectif de promouvoir le football amateur et de donner l'opportunité à tous les passionnés de ce
-            sport de jouer dans un environnement convivial.
-          </p>
+            <ul class="liens-footer">
+              <li><a href="html/calendrier.html">Calendrier</a></li>
+              <li><a href="html/cotisation.html">Cotisation</a></li>
+              <li><a href="html/planning.html">Planning</a></li>
+              <li><a href="html/planning.html#organigramme">Organigramme</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Equipes
-            <hr class="hr-footer-2" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Club
+              <hr class="hr-footer" style="width: 25%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="kids.html">kids</a></li>
-            <li><a href="jeunes.html">jeunes</a></li>
-            <li><a href="premiere.html">Premiere</a></li>
-            <li><a href="senior.html">Senior</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="html/histoire.html">Histoire</a></li>
+              <li><a href="html/sponsors.html">Sponsors</a></li>
+              <li><a href="html/projets.html">Projets</a></li>
+              <li><a href="html/projets.html#volontariat">Volontariat</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Club
-            <hr class="hr-footer-3" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Liens utiles
+              <hr class="hr-footer" style="width: 45%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="boutique.html">Boutique</a></li>
-            <li><a href="histoire.html">Histoire</a></li>
-            <li><a href="sponsor.html">Sponsor</a></li>
-            <li><a href="projet.html">Projet</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="html/boutique.html">Boutique</a></li>
+              <li><a href="html/events.html">Evénements</a></li>
+              <li><a href="html/equipes.html">Equipes</a></li>
+              <li><a href="html/contact.html">Contact</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Saison
-            <hr class="hr-footer-3" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Contact
+              <hr class="hr-footer" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="html/calendrier.html">Calendrier</a></li>
-            <li><a href="html/cotisation.html">Cotisation</a></li>
-            <li><a href="html/planning.html">Planning</a></li>
-          </ul>
-        </div>
+            <p style="max-width: 20vh">
+              <img src="img/icon-localisation.png" class="icon-footer" />
+              Rue Bois Frion 109, 6110 Montigny-le-Tilleul
+            </p>
+            <p>
+              <img src="img/icon-tel.png" class="icon-footer" alt="" />
+              0495/282992
+            </p>
 
-        <div class="footer-section-small">
-          <h3>
-            Liens utiles
-            <hr class="hr-footer-3" />
-          </h3>
-
-          <ul class="liens-footer">
-            <li><a href="html/boutique.html">Boutique</a></li>
-            <li><a href="html/events.html">Evénements</a></li>
-            <li><a href="html/contact.html">Contact</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h3>
-            Contact
-            <hr class="hr-footer-2" />
-          </h3>
-
-          <p style="max-width: 20vh">
-            <img src="img/icon-localisation.png" class="icon-footer" />
-            Rue Bois Frion 109, 6110 Montigny-le-Tilleul
-          </p>
-          <p>
-            <img src="img/icon-tel.png" class="icon-footer" alt="" />
-            0495/282992
-          </p>
-          <p style="max-width: 20vh">
-            <img src="img/icon-mail.png" class="icon-footer" alt="" />
-            michael.dupont@outlook.com
-          </p>
-          <p>
-            <img src="img/icon-horraire.png" alt="" class="icon-footer" />
-            9H / 19H
-          </p>
+            <p>
+              <img src="img/icon-horraire.png" alt="" class="icon-footer" />
+              9H / 19H
+            </p>
+          </div>
         </div>
       </div>
 
       <!-- Social icon -->
 
-      <div class="social-icon-container">
-        <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
-          <img src="img/logo-instagram.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://www.facebook.com/footmontigny" class="social-icon">
-          <img src="img/logo-facebook.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
-          <img src="img/logo-google.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://youtube.com/@asmontigny2175" class="social-icon">
-          <img src="img/logo-youtube.png" class="icon-taille" alt="" />
-        </a>
-      </div>
-
       <!--bottom footer -->
-
       <div class="bottom-footer">
-        <p class="copyright">Copyright &copy; 2024 Lucas Paludetto</p>
+        <div class="social-icon-container">
+          <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
+            <img src="img/logo-instagram.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://www.facebook.com/footmontigny" class="social-icon">
+            <img src="img/logo-facebook.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
+            <img src="img/logo-google.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://youtube.com/@asmontigny2175" class="social-icon">
+            <img src="img/logo-youtube.png" class="icon-taille" alt="" />
+          </a>
+        </div>
+
+        <p class="copyright">&copy; Made by Lucas Paludetto</p>
       </div>
     </footer>
   </body>
