--- a/html/projets.html
+++ b/html/projets.html
@@ -127,7 +127,7 @@
         </div>
       </div>
 
-      <div class="project">
+      <div class="project" id="volontariat">
         <div class="text-box">
           <h2>Le volontariat</h2>
           <p class="inter-light">
